[package]
name = "bunqers"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
ratelimited = ["dep:ritlers"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
openssl = "0.10.73"
reqwest = "0.12.20"
ritlers = { version = "0.2.0", features = ["async"], optional = true }
rust_decimal = "1.37.2"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.17"

[[example]]
name = "example_ratelimited"
required-features = ["ratelimited"]

[dev-dependencies]
tokio = { version = "1.46.1", features = ["full", "test-util"] }
serde = "1.0.219"
serde_json = "1.0.140"
